# CloudCent-CLI

./: .gitignore  Cargo.toml  README.md  go.mod  go.sum  install.ps1  install.sh  main.go
.github/workflows/: release.yml
cmd/: auth.go  cache.go  configcmd.go  diagram.go  history.go  metadata.go  pricing.go  pulumi.go  root.go  tui.go  tui_disabled.go
internal/api/: client_test.go  models.go
internal/config/: config.go
internal/db/: db.go
internal/drawio/: diagram.go  diagram_test.go  spec.go  spec_init.go  spec_init_test.go  spec_load.go  spec_test.go
internal/estimate/: estimator.go  estimator_test.go  print.go
internal/pulumi/: mapper.go  mapper_test.go  mock_resource_collector.go
internal/pulumi/resources/: model.go
internal/pulumi/resources/aws/: apigateway.go  cloudwatch.go  dynamodb.go  ebs.go  ec2.go  ecs.go  eventbridge.go  lambda.go  s3.go  sns.go  util.go
internal/semantic/: semantic.go
internal/tui/: app.go
internal/tui/views/: diagram.go  history.go  pricing.go  pulumi.go  settings.go  utils.go
npm/cloudcent/: package.json
npm/darwin-arm64/: package.json
npm/darwin-x64/: package.json
npm/linux-arm64/: package.json
npm/linux-x64/: package.json
npm/win32-arm64/: package.json
npm/win32-x64/: package.json
src/: config.rs  main.rs
src/api/: client.rs  mod.rs  models.rs
src/commands/: mod.rs  pricing.rs  user.rs
src/db/: mod.rs
src/tui/: app.rs  mod.rs  semantic.rs  ui.rs
src/tui/views/: estimate.rs  history.rs  mod.rs  pricing.rs  settings.rs
