[package]
name = "cloudcent"
version = "0.0.2-beta"
edition = "2024"

[features]
estimate = []
raw_command = []

[dependencies]
anyhow = "1.0.100"
tokio = { version = "1.48.0", features = ["full"] }
reqwest = { version = "0.11.27", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
dirs = "6.0.0"
serde_yaml = "0.9"
ratatui = "0.28"
crossterm = "0.28"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
fuzzy-matcher = "0.3"
open = "5.0"
flate2 = "1.0"
indexmap = { version = "2", features = ["serde"] }
